# WEB_HM

WEB_HM_1/: Bot.py  __main__.py  abstract_view.py  console_view.py  logs.txt
WEB_HM_11/webhm11/: docker-compose.yml  main.py  pyproject.toml  schemas.py
WEB_HM_11/webhm11/cloud/: config.py
WEB_HM_11/webhm11/conf/: config.py
WEB_HM_11/webhm11/database/: db.py  models.py
WEB_HM_11/webhm11/docs/: conf.py  index.rst
WEB_HM_11/webhm11/migrations/: env.py
WEB_HM_11/webhm11/migrations/versions/: 3170271430aa_init.py  513415ae96f1_init.py  779c98128cdd_init.py
WEB_HM_11/webhm11/postgres-data/base/13481/: pg_internal.init
WEB_HM_11/webhm11/postgres-data/global/: pg_control  pg_internal.init
WEB_HM_11/webhm11/postgres-data/pg_stat/: db_0.stat  db_13481.stat  global.stat
WEB_HM_11/webhm11/repository/: contacts.py  users.py
WEB_HM_11/webhm11/routes/: auth.py  contacts.py
WEB_HM_11/webhm11/services/: auth.py  email.py
WEB_HM_11/webhm11/tests/: conftest.py  test_route_auth.py  test_unit_repository_contacts.py
WEB_HM_2/: Dockerfile  main.py
WEB_HM_3/: fact.py  sort.py
WEB_HM_4/: Dockerfile  main.py  style.css
WEB_HM_5/: currency_api.py  currency_parser.py  main.py
WEB_HM_6/: check.py  fill_data.py  query.py  query_1.sql  query_10.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql  school.db
WEB_HM_7/: alembic.ini  config.py  connect_db.py  create_db.py  main.py  models.py  my_select.py  pyproject.toml  school.db  school.db #Шлях до бази даних  school.sql  seed.py
WEB_HM_8/: Dockerfile  (+7 more)
(+42 files in other folders)
